# check-service

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
forfar/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
forfar/fixtures/: initial_data.json
forfar/migrations/: 0001_initial.py
forfar/templates/forfar/: client_check.html  kitchen_check.html
forfar/tests/: test_order.json  test_tasks.py  test_views.py
tasktotest/: settings.py  urls.py  wsgi.py
